2004-04-19  James Tanis  <jtt@buscemi.sysdetect.com>

	* lib/b_run.c (bk_run_destroy): Dequeue all events *before*
	closing descriptors.
	(bk_run_destroy): Do not delete hashes for event queue and
	fdassoc's untill the bitter end, just ince case folks reference
	them during shutdown.

	* lib/b_ringdir.c (bk_ringdir_standard_destroy): Goto error in
	destroy function is not a good idea (leak).

2004-04-16  James Tanis  <jtt@buscemi.sysdetect.com>

	* lib/b_ringdir.c (bk_ringdir_filename_predecessor): Use the
	pattern with the full path.

2004-04-15  James Tanis  <jtt@buscemi.sysdetect.com>

	* lib/b_ringdir.c (bk_ringdir_standard_get_size): Return correct
	value on error.
	(bk_ringdir_standard_get_size): If the file descriptor is bad, try
	to stat with the filename.

2004-04-14  James Tanis  <jtt@buscemi.sysdetect.com>

	* lib/b_ringdir.c (bk_ringdir_filename_predecessor): Use full path
	pattern. 
	(bk_ringdir_filename_successor): ditto.

2004-04-07  James Tanis  <jtt@buscemi.sysdetect.com>

	* lib/b_ringdir.c: Iteration functions.
	(bk_ringdir_did_rotate_occur): Function to test if rotation
	occured on the last call to bk_ringdir_rotate().
	(bk_ringdir_rotate): Set flag is rotation occrs.
	(bk_ringdir_standard_get_fd): File descriptor accessor.
	(brd_create): Verify that input pattern creates valid filenames.

2004-03-26  Alexander Dupuy  <dupuy@sysdetect.com>

	* include/libbk.h: bk_struct_registry_t as opaque struct, not void *
	[using void * prevents gcc from finding bugs, requires extra casts]
	
	* lib/b_string.c (bk_string_registry_insert): zero out unused entries;
	don't reduce next_index on forced insert; verify string match on lookup

2004-03-25  Alexander Dupuy  <dupuy@sysdetect.com>

	* lib/b_string.c (bk_string_registry_insert): support for
	BK_STR_REGISTRY_FLAG_FORCE

2004-02-21  Seth Robertson  <seth@sysdetect.com>

	* src/genrand.c: Generate random powerball numbers:
	{ ./genrand -s 5 -n 52 | sort -n; ./genrand -s 1 -n 52; } |